Funciona, falta el crud de banco, que el encargado pueda insertar mediante la barra de navegacion, falta terminar el swagger y el manual
