# cliente/src/app/models/enfermera.ts
@@ -1,12 +1,12 @@
 export class Enfermera {
-  numero_trabajador: number;
-  idhospital: number;
-  idpersona: number;
-  password: string;
+  numero_trabajador?: number;
+  idhospital?: number;
+  idpersona?: number;
+  password?: string;
+  nombre?: string;
+  edad?:number;
+  genero?:string;
    constructor() {
-    this.numero_trabajador = 1;
-    this.idhospital = 0;
-    this.idpersona = 0;
-    this.password = 'password';
+
   }
 }
